# c-tris

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  mise.toml  vcpkg.json
.github/: README.MD
src/: app.h  colors.c  colors.h  config.h  draft.c  helpers.c  helpers.h  main.c  main_raylib.c
src/engine/: app.h  button.c  button.h  painter.c  painter.h  popup.c  popup.h  screen.c  screen.h
src/screens/game/: game_screen.c  game_screen.h  painter.c  painter.h
src/screens/game/components/: score.c  score.h  shape.c  shape.h  square.c  square.h  tetromino.c  tetromino.h
src/screens/game_screen/components/: square.h
src/screens/menu/: menu_screen.c  menu_screen.h
src/screens/over/: over_screen.c  over_screen.h
